<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/black">

    <RelativeLayout
        android:id="@+id/centerhorizontalline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="384dp">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:id="@+id/centerverticalline">

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/male"
        android:layout_width="147dp"
        android:layout_height="163dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="62dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="158dp"
        android:layout_toStartOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung">

        <ImageView
            android:id="@+id/malePic"
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="9dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/male">

        </ImageView>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="133dp"
            android:buttonTint="#FFFFFF"
            android:text="@string/male"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/female"
        android:layout_width="147dp"
        android:layout_height="163dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="62dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="158dp"
        android:layout_marginStart="55dp"
        android:layout_toEndOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung">

        <ImageView
            android:layout_width="119dp"
            android:layout_height="120dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/female">

        </ImageView>

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="27dp"
            android:layout_marginBottom="1dp"
            android:buttonTint="#FFFFFF"
            android:text="@string/femaletext"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />


    </RelativeLayout>

    z

    <TextView
        android:id="@+id/textView"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="222dp"
        android:layout_marginTop="253dp"
        android:text="@string/weight"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="222dp"
        android:layout_marginTop="406dp"
        android:text="Height"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtWeight"
        android:layout_width="357dp"
        android:layout_height="74dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-243dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="124dp"
        android:layout_toEndOf="@+id/textView"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="#0C0C0C"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txtFeet"
        android:layout_width="351dp"
        android:layout_height="72dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="459dp"
        android:layout_marginEnd="124dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="179dp"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="77dp"
        android:layout_marginBottom="338dp"
        android:background="#3C3F41"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/Calculate"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/lblBMI"
        android:layout_width="212dp"
        android:layout_height="66dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="338dp"
        android:text="@string/bmivalue"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imgbmi"
        android:layout_width="605dp"
        android:layout_height="302dp"
        android:layout_alignTop="@+id/btnCalculate"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/maxresdefault" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="322dp"
        android:layout_marginEnd="129dp"
        android:text="KG"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="463dp"
        android:text="CM"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp" />

</RelativeLayout>